# Shieldhood

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SKILL.md  bankr.config.yaml.example  docker-compose.yml  example.py  guard.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  publish.yml
shieldhood/: __init__.py
shieldhood/shieldhood/: guard.py
tests/: test_shieldhood.py
