[project]
name = "shieldhood"
version = "2.0.0"
description = "AI Security Shield for Bankr.bot - Protection against prompt injection on Robinhood Chain"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Laramée Line", email = "0xPoyraz@gmail.com"}
]
keywords = ["security", "ai", "prompt-injection", "defi", "bankr", "robinhood"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/0xPoyraz/Shieldhood"
"Repository" = "https://github.com/0xPoyraz/Shieldhood"

[project.scripts]
shieldhood = "shieldhood.guard:main"
