[project]
name = "shieldhood"
version = "2.1.0"
description = "Advanced AI Security Layer for Bankr.bot on Robinhood Chain - Protection against prompt injection, jailbreaks, and malicious commands"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Laramée Line", email = "0xPoyraz@gmail.com" }
]
keywords = ["security", "ai", "prompt-injection", "defi", "bankr", "robinhood", "jailbreak", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
"Homepage" = "https://www.shieldhood.xyz/"
"Repository" = "https://github.com/0xPoyraz/Shieldhood"
"Documentation" = "https://github.com/0xPoyraz/Shieldhood#readme"
"PyPI" = "https://pypi.org/project/shieldhood/"
"X (Twitter)" = "https://x.com/shieldhood"
"Bug Tracker" = "https://github.com/0xPoyraz/Shieldhood/issues"

[project.scripts]
shieldhood = "shieldhood.guard:main"   # optional CLI entry point

[tool.setuptools.packages.find]
where = ["."]
include = ["shieldhood*"]

[tool.setuptools]
py-modules = ["guard"]
