[metadata]
name = shieldhood
version = attr: shieldhood.__version__
description = AI Security Layer for Bankr.bot on Robinhood Chain
long_description = file: README.md
long_description_content_type = text/markdown
author = Laramée Line
author_email = 0xPoyraz@gmail.com
license = MIT
url = https://github.com/0xPoyraz/Shieldhood
keywords = security, ai, prompt-injection, defi, bankr, robinhood

[options]
python_requires = >=3.10
packages = find:
include_package_data = True

[options.packages.find]
where = .

[options.extras_require]
dev =
    -r requirements-dev.txt

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
